--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
     "framer-motion": "^12.23.22",
+    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "jose": "6.1.0",
     "jsdom": "^27.0.1",
@@ -92,8 +94,8 @@
     "@vitejs/plugin-react": "^5.0.4",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.31.4",
-    "esbuild": "^0.25.0",
+    "drizzle-kit": "^0.31.5",
+    "esbuild": "^0.25.11",
     "pnpm": "^10.15.1",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
@@ -103,7 +105,7 @@
     "typescript": "5.9.3",
     "vite": "^7.1.7",
     "vite-plugin-manus-runtime": "^0.0.52",
-    "vitest": "^2.1.4"
+    "vitest": "^4.0.3"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "pnpm": {
