--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ VITE_ANALYTICS_WEBSITE_ID=analytics_proj_abc123def456
 # Infrastructure (server-only)
 PORT=3000
 NODE_ENV=production
+
+# CORS Configuration (comma-separated list of allowed origins)
+ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
